fix: add breakpoint for profile name alignment issue

--- a/blocks/profile/__name-button/profile__name-button.css
+++ b/blocks/profile/__name-button/profile__name-button.css
@@ -3,9 +3,13 @@
   align-items: center;
   margin: 0 auto;
 }
+@media screen and (max-width: 1100px){
+  .profile__name-button {
+    justify-content: center;
+  }
+}
 @media screen and (max-width: 767px){
   .profile__name-button {
     width: 224px;
-    justify-content: center;
   }
 }
